# spaceships

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
src/spaceships/: __main__.py  agent.py  buffer.py  colors.py  direction.py  env.py  history.py  models.py  plotting.py
src/spaceships/cli/: __init__.py  auto_play_cli.py  play_cli.py  spaceships_group.py  train_cli.py
