[tool.poetry]
name = "spaceships"
version = "0.1.0"
description = ""
authors = ["Sagi Shadur <saroad2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.9.1"
numpy = "^1.23.1"
scipy = "^1.9.0"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
pygame = "^2.1.2"
gym = "^0.25.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
